# jupyter-stata-environment

./: .gitignore  LICENSE  Makefile  NBGRADER_GUIDE.md  QUICK_START.md  README.md  TEMPLATE_CHECKLIST.md  nbgrader_config.py  pyproject.toml  requirements.txt  setup.py
.github/: template.yml
docs/: NBGRADER_QUICK_START.md  NBGRADER_STATA_GUIDE.md  VSCODE_SETUP.md
examples/: README.md  assignment1_stata.ipynb  assignment_template.ipynb  python_stata_mixed.ipynb  simple_quiz.ipynb  stata_basics.ipynb
notebooks/: README.md
source/: README.md
